added masonry album view

--- a/public/index.html
+++ b/public/index.html
@@ -104,24 +104,27 @@
             <section id="main-main-section">
                 <div class="featured-div">
                     <h2 id="featured-div-header">Featured Albums</h2>
-                    
-                    <div id="featured-div-body">
-                        <img src="./images/album covers/Shoot for the Stars Aim for the Moon_Pop Smoke.jpg" alt=""
-                            id="featured-album-cover-art">
-                        <div id="featured-album-text-cont">
-                            <h3 id="featured-album-name">Shoot For The Stars, Aim For The Moon</h3>
-                            <p id="featured-album-artist">Pop Smoke</p>
-                            <p id="featured-album-description">Shoot for the Stars, Aim for the Moon is the debut studio album by American rapper Pop Smoke, and first posthumous project following his murder from a home invasion on February 19, 2020.</p>
-                        </div>
-                    </div>
 
                     <div class="grid other-featured-artists">
-                        <div class="grid-item grid-item--height2">1</div>
-                        <div class="grid-item">2</div>
-                        <div class="grid-item grid-item--width2">3</div>
-                        <div class="grid-item">4</div>
-                        <div class="grid-item grid-item--width2">5</div>
-                        <div class="grid-item">7</div>
+                        <div class="grid-item grid-item--height2">
+                            <img src="./images/album covers/Juice_Wrld-Legends_Never_Die.jfif" alt="" class="featured-artist-artist">    
+                        </div>
+                        <div class="grid-item">
+                            <img src="./images/album covers/21-savage-i-am-i-was-cover.jpg" alt="" class="featured-artist-artist">
+                        </div>
+                        <div class="grid-item">
+                            <img src="./images/album covers/Don_Toliver_-_Heaven_or_Hell.png" alt="" class="featured-artist-artist">
+                        </div>
+                        <div class="grid-item grid-item--width2">
+                            <img src="./images/album covers/Boldy-James-The-Alchemist-The-Price-Of-Tea-In-China-Deluxe-Edition-640x400.jpg" alt="" class="featured-artist-artist">
+                        </div>
+                        <div class="grid-item grid-item--width2">
+                            <img src="./images/album covers/Eternal Atake_Lil Uzi Vert.jpg" alt="" class="featured-artist-artist">
+                        </div>
+                        <div class="grid-item">
+                            <img src="./images/album covers/wunna.webp" alt="" class="featured-artist-artist">
+                        </div>
+                        <!-- <div class="grid-item">7</div>
                         <div class="grid-item grid-item--width2">8</div>
                         <div class="grid-item">10</div>
                         <div class="grid-item">13</div>
@@ -129,8 +132,7 @@
                         <div class="grid-item grid-item--height2">9</div>
                         <div class="grid-item grid-item--width2">11</div>
                         <div class="grid-item grid-item--height2">12</div>
-                        <div class="grid-item grid-item--width2">14</div>
-                        <div class="grid-item grid-item--height2">15</div>
+                        <div class="grid-item grid-item--width2">14</div> -->
                     </div>
                 </div>
             </section>
