home page and footer styling

--- a/public/index.html
+++ b/public/index.html
@@ -100,159 +100,56 @@
             <button id="login-btn">Login</button>
         </header>
 
-        <div id="main-body-cont">
-            <section id="main-main-section">
-               <div id="featured-div">
-                   <h2 id="featured-div-header">Featured Albums</h2>
-                   <div id="featured-div-body">
-                       <img src="./images/album covers/Shoot for the Stars Aim for the Moon_Pop Smoke.jpg" alt=""
-                           id="featured-album-cover-art">
-                       <div id="featured-album-text-cont">
-                           <h3 id="featured-album-name">Shoot For The Stars, Aim For The Moon</h3>
-                           <p id="featured-album-artist">Pop Smoke</p>
-                           <p id="featured-album-description">Shoot for the Stars, Aim for the Moon is the debut studio
-                               album by
-                               American rapper Pop Smoke, and first posthumous project following his murder from a home
-                               invasion on
-                               February 19, 2020.</p>
-                       </div>
-                   </div>
-               </div>
-
-               <div id="recently-added-div">
-                   <h2 id="recently-added-div-header">Recently Added</h2>
-                   <div id="recently-added-div-body">
-                       <div class="recently-added-album">
-                           <img src="./images/album covers/blame-it-on-baby.jpg" class="recenty-added-album-img">
-                           <p class="recently-added-album-name">Blame It On Baby</p>
-                           <p class="recently-added-album-artist">DaBaby</p>
-                       </div>
-                       <div class="recently-added-album">
-                           <img src="./images/album covers/welcome-to-the-o-block.jpg" class="recenty-added-album-img">
-                           <p class="recently-added-album-name">Welcome To The O</p>
-                           <p class="recently-added-album-artist">King Von</p>
-                       </div>
-                       <div class="recently-added-album">
-                           <img src="./images/album covers/wunna.webp" class="recenty-added-album-img">
-                           <p class="recently-added-album-name">Wunna</p>
-                           <p class="recently-added-album-artist">Gunna</p>
-                       </div>
-                   </div>
-               </div>
-            </section>
-            <section id="main-side-section">
-                <div id="trending-now-div">
-                    <h2 id="trending-now-div-header">Trending Now</h2>
-                    <div id="trending-div-body">
-                        <div class="trending-now-album">
-                            <img src="./images/play-now-trending-vector.png" class="trending-now-album-vector">
-                            <div class="trending-now-album-info">
-                                <p class="trending-now-album-name">
-                                    Legends Never Die
-                                </p>
-                                <p class="trending-now-album-artist">
-                                    Juice WRLD
-                                </p>
-                            </div>
-                            <p class="trending-now-additional-info">
-                                22 Tracks
-                            </p>
-                        </div>
-                        <div class="trending-now-album">
-                            <img src="./images/play-now-trending-vector.png" class="trending-now-album-vector">
-                            <div class="trending-now-album-info">
-                                <p class="trending-now-album-name">
-                                    Savage Mode II
-                                </p>
-                                <p class="trending-now-album-artist">
-                                    21 Savage & Metro Boomin
-                                </p>
-                            </div>
-                            <p class="trending-now-additional-info">
-                                15 Tracks
-                            </p>
-                        </div>
-                        <div class="trending-now-album">
-                            <img src="./images/play-now-trending-vector.png" class="trending-now-album-vector">
-                            <div class="trending-now-album-info">
-                                <p class="trending-now-album-name">
-                                    My Turn
-                                </p>
-                                <p class="trending-now-album-artist">
-                                    Lil Baby
-                                </p>
-                            </div>
-                            <p class="trending-now-additional-info">
-                                20 Tracks
-                            </p>
-                        </div>
-                    </div>
+        <div id="main-body-cont" class="home">
+            <div class="home-banner-sec left">
+                <h2 class="home-banner-header">A Somber Chat With Bobbie Luck</h2>
+                <div class="home-banner-social-row">
+                    <img src="./images/twitter-vector.svg" alt="twitter account link" class="home-banner-social-img">
+                    <img src="./images/instagram-vector.svg" alt="instagram account link" class="home-banner-social-img">
+                    <img src="./images/youtube-vector.svg" alt="youtube account link" class="home-banner-social-img">
                 </div>
-                <div id="popular-artists-div">
-                    <h2 id="popular-artists-div-header">Popular Artists</h2>
-                    <div id="popular-artists-div-body">
-                        <div class="popular-artist">
-                            <img src="./images/artist pics/Chance_The_Rapper.jpg" class="popular-artist-img">
-                            <div class="popular-artist-info">
-                                <p class="popular-artist-name">Chance The Rapper</p>
-                                <p class="popular-artist-followers">12.3M Followers</p>
-                            </div>
-                            <img src="./images/dots-horizontal-vector.png" alt="options" class="popular-artist-dots">
-                        </div>
-                        <div class="popular-artist">
-                            <img src="./images/artist pics/drake.jfif" class="popular-artist-img">
-                            <div class="popular-artist-info">
-                                <p class="popular-artist-name">Drake</p>
-                                <p class="popular-artist-followers">66.5M Followers</p>
-                            </div>
-                            <img src="./images/dots-horizontal-vector.png" alt="options" class="popular-artist-dots">
-                        </div>
-                        <div class="popular-artist">
-                            <img src="./images/artist pics/lil_durk.jpg" class="popular-artist-img">
-                            <div class="popular-artist-info">
-                                <p class="popular-artist-name">Lil Durk</p>
-                                <p class="popular-artist-followers">7.8M Followers</p>
-                            </div>
-                            <img src="./images/dots-horizontal-vector.png" alt="options" class="popular-artist-dots">
-                        </div>
-                    </div>
-                </div>
-            </section>
+                <p class="home-banner-paragraph">We caught up with upcomin wonder-boy Bobbie Luck and we gotta say in all ways possible it was different from what we expected. We had expected a longer interview but he just called to an emergency show and we forced to cut down our interview to a short but extremely intriguing chat.</p>
+            </div>
+            <div class="home-banner-sec right">
+                <h2 class="home-banner-header">I Used To Dream In Color</h2>
+                <h3 class="home-banner-subtitle">Bobbie Luck</h3>
+                <p class="home-banner-paragraph">We caught up with upcomin wonder-boy Bobbie Luck and we gotta say in all ways possible it was different from what we expected. We had expected a longer interview but he just called to an emergency show and we forced to cut down our interview to a short but extremely intriguing chat.</p>
+            </div>
         </div>
+
+        <footer id="player">
+            <progress id="player-progress" value=".3"></progress>
+            <div id="player-controls">
+                <div id="track-info-cont">
+                    <img src="./images/player album art.jfif" alt="" class="track-art">
+
+                    <div id="track-info-info">
+                        <p id="player-track-name">Deep Pockets</p>
+                        <p id="player-track-artists">Drake</p>
+                    </div>
+                </div>
+
+                <div id="player-controls-controls">
+                    <img src="./images/repeat-vector.png" alt="repeat" class="player-control-img repeat">
+                    <img src="./images/prev-vector.png" alt="previous" class="player-control-img previous">
+                    <img src="./images/play-vector.png" alt="play" class="player-control-img play">
+                    <img src="./images/next-vector.png" alt="next" class="player-control-img next">
+                    <img src="./images/shuffle-vector.png" alt="shuffle" class="player-control-img shuffle">
+                </div>
+
+                <div id="player-volume-controls-container">
+                    <img src="./images/volume-vector.png" alt="volume control" class="player-control-img">
+                    <progress id="player-volume-control" value=".9"></progress>
+                </div>
+
+                <div id="player-additional-controls-cont">
+                    <img src="./images/favorite-vector.png" alt="Add to Favorites" class="player-control-img">
+                    <img src="./images/add-to-playlist-vector.png" alt="Add to Playlist" class="player-control-img">
+                    <img src="./images/download-vector.png" alt="Download Track" class="player-control-img">
+                </div>
+            </div>
+        </footer>
     </main>
-
-    <footer id="player">
-        <progress id="player-progress" value=".3"></progress>
-        <div id="player-controls">
-            <div id="track-info-cont">
-                <img src="./images/player album art.jfif" alt="" class="track-art">
-
-                <div id="track-info-info">
-                    <p id="player-track-name">Deep Pockets</p>
-                    <p id="player-track-artists">Drake</p>
-                </div>
-            </div>
-
-            <div id="player-controls-controls">
-                <img src="./images/repeat-vector.png" alt="repeat" class="player-control-img">
-                <img src="./images/prev-vector.png" alt="previous" class="player-control-img">
-                <img src="./images/play-vector.png" alt="play" class="player-control-img">
-                <img src="./images/next-vector.png" alt="next" class="player-control-img">
-                <img src="./images/shuffle-vector.png" alt="shuffle" class="player-control-img">
-            </div>
-
-            <div id="player-volume-controls-container">
-                <img src="./images/volume-vector.png" alt="volume control" class="player-control-img">
-                <progress id="player-volume-control" value=".9"></progress>
-            </div>
-
-            <div id="player-additional-controls-cont">
-                <img src="./images/favorite-vector.png" alt="Add to Favorites" class="player-control-img">
-                <img src="./images/add-to-playlist-vector.png" alt="Add to Playlist" class="player-control-img">
-                <img src="./images/download-vector.png" alt="Download Track" class="player-control-img">
-            </div>
-        </div>
-    </footer>
 
 
     <script>
