Implemented song view

--- a/public/index.html
+++ b/public/index.html
@@ -105,15 +105,22 @@
                 <h2 class="home-banner-header">A Somber Chat With Bobbie Luck</h2>
                 <div class="home-banner-social-row">
                     <img src="./images/twitter-vector.svg" alt="twitter account link" class="home-banner-social-img">
-                    <img src="./images/instagram-vector.svg" alt="instagram account link" class="home-banner-social-img">
+                    <img src="./images/instagram-vector.svg" alt="instagram account link"
+                        class="home-banner-social-img">
                     <img src="./images/youtube-vector.svg" alt="youtube account link" class="home-banner-social-img">
                 </div>
-                <p class="home-banner-paragraph">We caught up with upcomin wonder-boy Bobbie Luck and we gotta say in all ways possible it was different from what we expected. We had expected a longer interview but he just called to an emergency show and we forced to cut down our interview to a short but extremely intriguing chat.</p>
+                <p class="home-banner-paragraph">We caught up with upcomin wonder-boy Bobbie Luck and we gotta say in
+                    all ways possible it was different from what we expected. We had expected a longer interview but he
+                    just called to an emergency show and we forced to cut down our interview to a short but extremely
+                    intriguing chat.</p>
             </div>
             <div class="home-banner-sec right">
                 <h2 class="home-banner-header">I Used To Dream In Color</h2>
                 <h3 class="home-banner-subtitle">Bobbie Luck</h3>
-                <p class="home-banner-paragraph">We caught up with upcomin wonder-boy Bobbie Luck and we gotta say in all ways possible it was different from what we expected. We had expected a longer interview but he just called to an emergency show and we forced to cut down our interview to a short but extremely intriguing chat.</p>
+                <p class="home-banner-paragraph">We caught up with upcomin wonder-boy Bobbie Luck and we gotta say in
+                    all ways possible it was different from what we expected. We had expected a longer interview but he
+                    just called to an emergency show and we forced to cut down our interview to a short but extremely
+                    intriguing chat.</p>
             </div>
         </div>
 
