--- a/public/index.html
+++ b/public/index.html
@@ -124,6 +124,38 @@
             </div>
         </div>
 
+        
+        <div class="overlay-view-container">
+            <div class="overlay-overlay"></div>
+            <div class="overlay-view-main album">
+                <div class="album-view-left">
+                    <img src="./images/album covers/21-savage-i-am-i-was-cover.jpg" alt="21 Savage - I Greater Than I Was Album Cover" class="album-cover">
+                    <div class="album-details">
+                        <h4 class="album-title">I AM > I WAS</h4>
+                        <h5 class="album-artist">21 Savage</h5>
+                        <p class="album-description">Legends Never Die is the third studio album by American rapper Juice Wrld, released following his death on December 8, 2019. It was released on July 10, 2020, through Grade A Productions and Interscope Records. The album features guest appearances from the Weeknd, Trippie Redd, Marshmello, Polo G, The Kid Laroi, and Halsey.</p>
+                    </div>
+                </div>
+                <div class="album-view-right">
+                    <h4 class="tracklist-header">TrackList</h4>
+                    <ol class="tracklist">
+                        <li class="tracklist-item">"Anxiety" (Intro)</li>
+                        <li class="tracklist-item">"Conversations"</li>
+                        <li class="tracklist-item">"Titanic"</li>
+                        <li class="tracklist-item">"Bad Energy"</li>
+                        <li class="tracklist-item">"Righteous"</li>
+                        <li class="tracklist-item">"Blood on My Jeans"</li>
+                        <li class="tracklist-item">"Smile" (with the Weeknd)</li>
+                        <li class="tracklist-item">"Tell Me U Luv Me" (with Trippie Redd)</li>
+                        <li class="tracklist-item">	"Hate the Other Side" (with Marshmello featuring Polo G and The Kid Laroi)</li>
+                        <li class="tracklist-item">	"Get Through It" (Interlude)</li>
+                        <li class="tracklist-item">"Life's a Mess" (with Halsey)</li>
+                    </ol>
+                    <button class="album-play">Listen</button>
+                </div>
+            </div>
+        </div>
+
         <footer id="player">
             <progress id="player-progress" value=".3"></progress>
             <div id="player-controls">
