fixed page linking

--- a/public/index.html
+++ b/public/index.html
@@ -63,23 +63,23 @@
             </ul>
             <ul class="nav-group">
                 <li class="nav-group-header">Playlists</li>
-                <li class="nav-group-item" id="nav-featured-link">
+                <li class="nav-group-item playlist" id="nav-featured-link">
                     <img src="./images//playlist-vector.png" class="nav-item-img">
                     <span class="nav-item-text">Featured</span>
                 </li>
-                <li class="nav-group-item" id="nav-hot-link">
+                <li class="nav-group-item playlist" id="nav-hot-link">
                     <img src="./images//playlist-vector.png" class="nav-item-img">
                     <span class="nav-item-text">Hot Now</span>
                 </li>
-                <li class="nav-group-item" id="nav-new-link">
+                <li class="nav-group-item playlist" id="nav-new-link">
                     <img src="./images//playlist-vector.png" class="nav-item-img">
                     <span class="nav-item-text">New</span>
                 </li>
-                <li class="nav-group-item" id="nav-rising-link">
+                <li class="nav-group-item playlist" id="nav-rising-link">
                     <img src="./images//playlist-vector.png" class="nav-item-img">
                     <span class="nav-item-text">Rising</span>
                 </li>
-                <li class="nav-group-item" id="nav-your-playlists-link">
+                <li class="nav-group-item playlist" id="nav-your-playlists-link">
                     <img src="./images//playlist-vector.png" class="nav-item-img">
                     <span class="nav-item-text">Your Playlists</span>
                 </li>
